# DVR2Plex

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  chandvr2plex.c  chandvr2plex.h  dictionary.c  dictionary.h  dvr2plex.c  dvr2plex.h  keywords.hash  patterns.hash
docs/: README.md
mkln/: mkln.c  mkln.h
